--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="row">
           <div class="col">
             <div class="card" style="width: 18rem;">
-                <img src="IMG/1.jpg" class="card-img-top" alt="...">
+                <img src="1.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Imaginary Tree</h5>
                   <p class="card-text">The Imaginary Tree emerged from "an endless Sea of unfathomable depths and boundaries." Since the Imaginary Tree and Sea Of Quanta are alone in the universe,</p>
@@ -86,7 +86,7 @@
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-                <img src="IMG/2.jpg" class="card-img-top" alt="...">
+                <img src="2.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Sea of Quanta</h5>
                   <p class="card-text">The Sea Of Quanta is a very important place in the world of Honkai Impact 3rd. It is the place where bubble universes reside and several characters sealed</p>
@@ -96,7 +96,7 @@
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-                <img src="IMG/3.jpg" class="card-img-top" alt="...">
+                <img src="3.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Will of Honkai</h5>
                   <p class="card-text">The Will of Honkai is a mysterious entity and is the creator and leader of all Honkai. The Will of Honkai usually appears as a white, or colorless, featureless humanoid</p>
