--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-warning">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Honkai Impact 3rd</a>
+          <img src="Logo_Honkai_Impact_3.png" >
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -20,14 +20,14 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Download</a>
+                <a class="nav-link" href="https://honkaiimpact3.hoyoverse.com/global/en-us/home">Download</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   About us
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Games</a></li>
+                  <li><a class="dropdown-item" href="https://www.hoyoverse.com/id-id/">Hoyoverse</a></li>
                   <li><a class="dropdown-item" href="#">Official Website</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Feedback</a></li>
@@ -53,7 +53,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="1.jpg" class="mx-auto d-block w-100" alt="...">
+            <img src="Imaginary_Tree_Small.png" class="mx-auto d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="2.jpg" class="mx-auto d-block w-100" alt="...">
@@ -76,7 +76,7 @@
         <div class="row">
           <div class="col">
             <div class="card" style="width: 18rem;">
-                <img src="1.jpg" class="card-img-top" alt="...">
+                <img src="Imaginary_Tree_Small.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Imaginary Tree</h5>
                   <p class="card-text">The Imaginary Tree emerged from "an endless Sea of unfathomable depths and boundaries." Since the Imaginary Tree and Sea Of Quanta are alone in the universe,</p>
